# jupyter-sql-converter

./: .gitignore  README.md  pyproject.toml
src/jupytersqlconverter/: cli.py  preprocessor.py  utils.py
src/jupytersqlconverter/templates/: latex.jinja  markdown.jinja  table_image.jinja
